--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,13 @@
           <mat-label>DNI</mat-label>
           <input matInput formControlName="dni" autocomplete="off">
 
-          <!-- <mat-error *ngIf="dni.error? && dni.touched">
-          </mat-error> -->
+          <mat-error *ngIf="dni.errors?.required && dni.touched">
+            Debe ingresar un  dni
+          </mat-error>
 
+          <mat-error *ngIf="dni.errors?.minlength && dni.touched">
+            Debe ingresar 8 digitos
+          </mat-error>
         </mat-form-field>
 
 
@@ -19,17 +23,27 @@
           <mat-label>Fecha de la receta</mat-label>
           <input matInput formControlName="date" autocomplete="off" type="date" [min]="today">
 
-          <!-- <mat-error *ngIf="date.error? && date.touched"></mat-error> -->
+          <mat-error *ngIf="date.errors?.required && date.touched">
+            Debe ingresar un fecha
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
           <mat-label>Matricula del profesional</mat-label>
           <input matInput formControlName="professional" autocomplete="off">
+
+          <mat-error *ngIf="professional.errors?.required && professional.touched">
+            Debe ingresar una matricula
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
           <mat-label>Medicamente recetado</mat-label>
           <input matInput formControlName="supply" autocomplete="off">
+
+          <mat-error *ngIf="supply.errors?.required && supply.touched">
+            Este campo es requerido
+          </mat-error>
         </mat-form-field>
 
         <button mat-raised-button color="primary" type="submit">
