--- a/src/app/components/prescriptions/validator-form/validator-form.component.html
+++ b/src/app/components/prescriptions/validator-form/validator-form.component.html
@@ -1,5 +1,4 @@
-ng g c /components/prescriptions/validatorForm<div class="container">
-
+<div class="container">
   <mat-card>
     <form [formGroup]="prescriptionForm" (ngSubmit)="onSubmitPrescriptionForm">
       <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
