Search professional and complete inputs

--- a/src/app/components/prescriptions/validator-form/validator-form.component.sass
+++ b/src/app/components/prescriptions/validator-form/validator-form.component.sass
@@ -3,5 +3,16 @@
   max-width: 420px
   margin: 120px auto 0px
 
-  .mat-form-field, button
-    margin: 10px 0
+.mat-form-field, button
+  margin: 10px 0
+
+.loading
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  background: rgba(0, 0, 0, 0.15)
+  z-index: 1
+  display: flex
+  align-items: center
+  justify-content: center
