Add icon and translate login

--- a/src/app/auth/auth.component.sass
+++ b/src/app/auth/auth.component.sass
@@ -4,3 +4,15 @@
     height: 100%
     .container
         margin-top: 100px
+
+.icon-login
+    width: 100px
+    height: 100px
+
+@font-face
+  font-family: roboto
+  src: url(assets/fonts/RobotoCondensed-Regular.ttf) format("opentype")
+
+.title-login
+  color: white
+  font-family: roboto
