--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="start center" class="container">
+  <img src="assets/img/LogoRecetar.png" class="icon-login">
+  <h1 class="title-login">RecetAR</h1>
   <mat-card>
     <router-outlet></router-outlet>
   </mat-card>
