--- a/src/app/shared/layouts/header/header.component.sass
+++ b/src/app/shared/layouts/header/header.component.sass
@@ -3,3 +3,8 @@ mat-toolbar
   color: #ffffff
   .container-header
     width: 100%
+
+.icon-navbar
+  width: 40px
+  height: 40px
+  margin-right: 6px
