Add search prescriptions

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -6,6 +6,7 @@
           Registrar nueva receta
         </h1>
 
+        <!-- Fecha de receta -->
         <mat-form-field appearance="fill">
           <mat-label>Fecha receta</mat-label>
           <input matInput [matDatepicker]="picker1" [formControl]="date">
