--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
@@ -6,9 +6,9 @@
   margin: 10px 0
 
 .prescriptions
-  width: 40%
-  margin: 30px auto 0px
+  width: 52%
+  margin: 30px auto 0px 30px
 
 .insurances
-  width: 20%
-  margin: 30px auto 0px
+  width: 27%
+  margin: 30px auto 0px 30px
