--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -80,8 +80,11 @@
         <ng-container matColumnDef="buttons">
           <th mat-header-cell *matHeaderCellDef> Acción </th>
           <td mat-cell *matCellDef="let prescription">
-            <button mat-button color="info" matTooltip="Imprimir"><mat-icon >print</mat-icon></button>
-            <button mat-button color="primary" matTooltip="Dispensar"><mat-icon >done_outline</mat-icon></button>
+
+            <button mat-button color="info" matTooltip="Próximamente"><mat-icon >print</mat-icon></button>
+            <div *ngIf="prescription.status == 'Pendiente'">
+              <button mat-button color="primary" (click)="dispense(prescription)" matTooltip="Dispensar"><mat-icon >done_outline</mat-icon></button>
+            </div>
           </td>
         </ng-container>
       
