Change 404 layout. Fix supply selector

--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -1,8 +1,8 @@
 <div class="container" fxLayout="row" fxLayoutAlign="space-between center">
-  <mat-card>
+  <mat-card class="search-prescription">
     <form [formGroup]="prescriptionForm">
       <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
-        <h1>Buscar prescripción</h1>
+        <h1><mat-icon >search</mat-icon> Buscar prescripción</h1>
 
         <!-- Dni del paciente -->
         <mat-form-field appearance="fill">
