--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -90,16 +90,15 @@
 
         <mat-form-field appearance="fill">
           <mat-label>Medicamento</mat-label>
-          {{drugs | json }}
           <input type="text"
                   placeholder="Medicamento"
                   aria-label="Number"
                   matInput
                   formControlName="supply"
-                  [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of drugs" [value]="option.name">
-              {{option.name}}
+                  [matAutocomplete]="supply">
+          <mat-autocomplete #supply="matAutocomplete">
+            <mat-option *ngFor="let supply of supplies" [value]="supply.name">
+              {{supply.name}}
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
