--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -80,7 +80,7 @@
         <ng-container matColumnDef="print">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let prescription">
-            <button mat-button color="info" matTooltip="Próximamente"><mat-icon >print</mat-icon></button>
+            <button mat-button color="info" matTooltip="Próximamente" matTooltipPosition="above"><mat-icon >print</mat-icon></button>
           </td>
         </ng-container>
         
@@ -88,7 +88,7 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let prescription">
             <div *ngIf="prescription.status === 'Pendiente'">
-              <button mat-button color="primary" (click)="dispense(prescription)" matTooltip="Dispensar"><mat-icon >done_outline</mat-icon></button>
+              <button mat-button color="primary" (click)="dispense(prescription)" matTooltip="Dispensar" matTooltipPosition="above"><mat-icon >done_outline</mat-icon></button>
             </div>
           </td>
         </ng-container>
