Improve pharmacist index. Fix enter login

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -12,8 +12,8 @@
 
     <mat-form-field>
       <mat-label>Contraseña</mat-label>
-      <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" autocomplete="off">
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <input  matInput formControlName="password" [type]="hide ? 'password' : 'text'" autocomplete="off">
+      <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
 
