--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -1,7 +1,7 @@
-<div class="container" fxLayout="row" fxLayoutAlign="space-between center">
+<div class="container" fxLayout="row" fxLayoutAlign="space-evenly start">
   <mat-card class="search-prescription">
     <form [formGroup]="prescriptionForm">
-      <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
+      <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
         <h1><mat-icon >search</mat-icon> Buscar prescripción</h1>
 
         <!-- Dni del paciente -->
@@ -33,7 +33,7 @@
         <!-- Fecha de receta -->
         <mat-form-field appearance="fill">
           <mat-label>Fecha receta</mat-label>
-          <input matInput [matDatepicker]="picker1" [formControl]="date">
+          <input matInput [matDatepicker]="picker1" [formControl]="dateFilter">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
@@ -43,8 +43,11 @@
 
 
   <mat-card class="prescriptions">
-    <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
-      <h1>Prescripciones</h1>
+    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
+      <h1>
+        <mat-icon>gesture</mat-icon>
+        Prescripciones
+      </h1>
 
       <table mat-table *ngIf="prescriptions" [dataSource]="prescriptions" class="mat-elevation-z8">
       
@@ -100,8 +103,11 @@
   </mat-card>
 
   <mat-card class="insurances">
-    <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
-      <h1>Obras sociales</h1>
+    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
+      <h1>
+        <mat-icon>policy</mat-icon>
+        Obras sociales
+      </h1>
       <table mat-table *ngIf="insurances" [dataSource]="insurances" class="mat-elevation-z8">
       
         <!-- Position Column -->
