Add default current date

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -11,7 +11,7 @@
           <mat-label>Fecha receta</mat-label>
           <input matInput [matDatepicker]="picker1" [formControl]="date" autocomplete="off">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-          <mat-datepicker #picker1></mat-datepicker>
+          <mat-datepicker [startAt]="today" #picker1></mat-datepicker>
         </mat-form-field>
 
         <!-- Dni del paciente -->
